[PRO-1714] Remove namespace as query parameter to device-registry/resolver
