# docs/swagger/sota-device_registry.yml
@@ -18,12 +18,7 @@ produces:
 paths:
   /devices:
     get:
-      description: 'Get a list of all the devices in a particular namespace in the device registry.'
-      parameters:
-      - name: namespace
-        in: query
-        required: true
-        type: string
+      description: 'Get a list of all the devices in the namespace in the device registry.'
       responses:
         200:
           description: OK
@@ -34,10 +29,6 @@ paths:
     post:
       description: 'Register a new device with a name and an ID, get back its UUID'
       parameters:
-      - name: namespace
-        in: query
-        required: true
-        type: string
       - name: DeviceT
         in: body
         required: true
